src/objects/C501_Goal_Outcome__c.object
<CustomObject>
    <description>The desired outcome associated with the goal.</description>
    <fields>
        <fullName>C501_Collaborative_Outcome__c</fullName>
        <label>Collaborative Outcome</label>
        <referenceTo>C501_Collaborative_Outcome__c</referenceTo>
        <relationshipLabel>Goal Outcomes</relationshipLabel>
        <relationshipName>Goal_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>C501_Goal_Outcome_Name__c</fullName>
        <formula>C501_Collaborative_Outcome__r.C501_Outcome_Name__c</formula>
        <label>Goal Outcome Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Goal Outcomes</relationshipLabel>
        <relationshipName>Goal_Outcomes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Goal Outcome</label>
    <nameField>
        <displayFormat>GO-{00000}</displayFormat>
        <label>Goal Outcome Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>